--- a/MasterThesis/abstract.tex
+++ b/MasterThesis/abstract.tex
@@ -1,6 +1,5 @@
 \begin{abstract}
 \textit{
-This thesis deals with the problem of integrating semantic licensing from the Data Licenses Clearance Center (DALICC) library into a smart contract and semantic representation of the deployment environment of such a smart contract. For this purpose, we divide this research 
-into four sections: first, we focused on how smart contracts build up on the blockchain and some more details about this system. Second, we demonstrate how blockchain can be integrated with semantic web technology. It is focused on some solutions for indexing and executing smart contracts on the Ethereum blockchain. And the third section is focused on DALICC as a framework that helps to detect license conflict and reduce the costs of rights clearance. And in the last section, we built up DApp to integrate semantic licenses with contents using smart contracts and represent a semantic model of these deployments.
+This thesis addresses the issue of semantic representation of the deployment environment of a smart contract and the integration of semantic licensing from the Data Licenses Clearance Center (DALICC) library. This research is divided into four sections for the following reasons: First, we concentrated on how smart contracts develop on the blockchain and some additional information about this system. Second, we show how blockchain and semantic web technology can work together. It focuses on several methods for indexing and running Ethereum blockchain smart contracts. The third segment, meanwhile, focuses on DALICC as a framework for identifying licensing conflicts and cutting down on the price of rights clearance. In the final piece, we created a DApp to describe a semantic model of these installations and connect semantic licensing with content using smart contracts.
 }
 \end{abstract}
