--- a/MasterThesis/biblio.bib
+++ b/MasterThesis/biblio.bib
@@ -7,7 +7,7 @@
       year = {2016},
       url = {https://eprint.iacr.org/2016/1156}
 },
-@inproceedings{english2016block,
+@inproceedings{Matthew,
   title={Block chain technologies \& the semantic web: A framework for symbiotic development},
   author={English, Matthew and Auer, S{\"o}ren and Domingue, John},
   booktitle={Computer Science Conference for University of Bonn Students},
