--- a/MasterThesis/chapter2.tex
+++ b/MasterThesis/chapter2.tex
@@ -141,7 +141,7 @@ Blockchain only keeps a binary form of each contract together with its associate
 			\centering
 			\includegraphics[width=1.95\textwidth]{images/chap02_SmartContract_ABI.png}
 		\end{minipage}
-		\caption[Smart contract application binary interface (ABI)]{Smart contract application Bbinary interface (ABI)}
+		\caption[Smart contract application binary interface (ABI)]{Smart contract application Bbinary interface (ABI) \cit{Third}}
 		
 	\end{figure}
 	
